<resources>
    <string name="app_name">Jams</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gain_left_caps">GAIN (L)</string>
    <string name="gain_right_caps">GAIN (R)</string>
    <string name="load_preset_caps">LOAD PRESET</string>
    <string name="save_preset_caps">SAVE PRESET</string>
    <string name="apply_to_caps">APPLY TO</string>
    <string name="load_preset">Load Preset</string>
    <string name="save_preset">Save Preset</string>
    <string name="apply_to">Apply to</string>
    <string name="title_activity_song_browser">Jams</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_artists">Search Artists</string>
    <string name="search_albums">Search Albums</string>
    <string name="search_songs">Search Songs</string>
    <string name="playlists">Playlists</string>
    <string name="search_playlists">Search Playlists</string>
    <string name="artists_caps">ARTISTS</string>
    <string name="albums_caps">ALBUMS</string>
    <string name="songs_caps">SONGS</string>
    <string name="playlists_caps">PLAYLISTS</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="play_all">Play All</string>
    <string name="pin">Pin</string>
    <string name="master_volume_caps">MASTER VOLUME</string>
    <string name="equalizer_caps">EQUALIZER</string>
    <string name="audio_effects_caps">AUDIO FX</string>
    <string name="virtualizer_caps">VIRTUALIZER</string>
    <string name="bass_boost_caps">BASS BOOST</string>
    <string name="reverb_caps">REVERB EFFECT:</string>
    <string name="now_playing_caps">NOW PLAYING</string>
    <string name="cover_art_style_description">Choose the way cover art is displayed on the Now Playing screen.</string>
    <string-array name="settings_titles">
        <item>Application Theme</item>
        <item>Now Playing Color Scheme</item>
        <item>Customize Pages</item>
        <item>Cover Art Style</item>
        <item>Auto Fetch Album Art</item>
        <item>Music Folders</item>
        <item>Rescan Music Folders</item>
        <item>Scan Frequency</item>
        <item>Licenses</item>
        <item>Contact Us</item>
    </string-array>
    <string-array name="settings_descriptions">
        <item>Choose a light or dark base theme for the entire application.</item>
        <item>Choose a color scheme for the Now Playing screen and playback controls.</item>
        <item>Rearrange the order of the app\'s main pages.</item>
        <item>Customize the way cover art is displayed on the Now Playing screen.</item>
        <item>Pick whether you want to use the album art fetching service or display embedded art.</item>
        <item>Choose the folders that contain your music. Files in other folders will be ignored.</item>
        <item>Rescan your music folders to update your music library.</item>
        <item>Set how often your want your music folders to be scanned for new files.</item>
        <item>Legal jingo about the app and its components.</item>
        <item>Spot a bug, have a feature request, or can\'t figure something out? We\'re here to help.</item>
    </string-array>
    <string name="title_activity_settings_detail">SettingsDetailActivity</string>
    <string name="app_theme">Theme</string>
    <string name="now_playing_color_scheme">Color Accent</string>
    <string-array name="app_theme_choices">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="now_playing_color_schemes">
        <item>White</item>
        <item>Gray</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Magenta</item>
        <item>Black</item>
    </string-array>
    <string name="folders_caps">FOLDERS</string>
    <string name="licenses">Licenses</string>
    <string name="oxygen_icons_license_description">This application uses one or more icons from the Oxygen Icon Theme, which is not affliated with this app in any way. The icons are distributed under the Creative Commons 3.0 ShareALike License. A copy of the license can be obtained here: </string>
    <string name="invalid_file_message"> doesn\'t seem to be an audio file. Check to make sure that the file extension is set properly.</string>
    <string name="error">Error</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="genres_caps">GENRES</string>
    <string name="building_music_library">Building Music Library</string>
    <string name="welcome_text_1">Thanks for downloading Jams Music Player. To help you get started with the app, you\'ll be guided through a few initial steps. Swipe left to continue.</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="welcome_text_2">On the next dialog, you\'ll be presented with the list of folders that you have access to. Choose the folders that contain the music that you would like to add to your library. Note that audio files in the root directory (/mnt/sdcard) will always be added to your music library.</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text_3">On the next dialog, choose how often you want your folders to be automatically rescanned. Higher scan frequencies mean that you may need to wait a few moments before you can start using the app. Lower scan frequencies mean that you may need to manually rescan your folders when you add new music.</string>
    <string name="welcome_text_4">If you know that you\'ll be frequently changing the music on your device, choose a higher scan frequency on the next dialog. This means that your library will stay as up to date as possible, but you may need to wait a few moments before you can use the app. If your music library won\'t change as often, choose a lower scan frequency.</string>
    <string name="welcome_text_5">Remember that you can always manually scan for new music by going to the settings page once the app is set up.</string>
    <string name="scan_frequency">Scan Frequency</string>
    <string-array name="scan_frequency_choices">
        <item>Scan at every startup</item>
        <item>Scan every 3 startups</item>
        <item>Scan every 5 startups</item>
        <item>Scan every 10 startups</item>
        <item>Scan every 20 startups</item>
        <item>Scan manually</item>
    </string-array>
    <string name="welcome_text_6">Jams will now scan your folders and/or Google Play for audio files and playlists, and build your music library for the first time. This scan will take longer to complete than any subsequent scans, so please be patient and don\'t close the app while it\'s running.</string>
    <string name="finish">Finish</string>
    <string name="song_actions">Song Actions</string>
    <string name="view_song_info">View Song Information</string>
    <string name="edit_song_tags">Edit Song Tags</string>
    <string name="blacklist_song">Blacklist Song</string>
    <string name="title">Title:</string>
    <string name="artist">Artist:</string>
    <string name="album">Album:</string>
    <string name="genre">Genre:</string>
    <string name="year">Year:</string>
    <string name="album_artist">Album Artist:</string>
    <string name="composer">Composer:</string>
    <string name="producer">Producer:</string>
    <string name="comments">Comments: </string>
    <string name="track">Track:</string>
    <string name="of">of</string>
    <string name="file_could_not_be_opened">The file could not be opened. Try rescanning your library.</string>
    <string name="restart_app">Restart App</string>
    <string name="restart">Restart</string>
    <string name="rescan_folders_prompt">Jams needs to rescan your music folders to fully update your music library with the new song tags. Using the app without rescanning may cause stability issues while accessing songs that you just edited. Touch \'Rescan\' to continue.</string>
    <string name="rescan">Rescan</string>
    <string name="updating_song_info">Updating Song Information</string>
    <string name="refreshing_library">Refreshing Library</string>
    <string name="rescan_prompt">Your music library needs to be rescanned to display the updated song tags. If you want to edit more tags, you can update after you\'re done editing all your tags. Tap on the \'Rescan Required\' banner at the bottom of your screen once you\'re ready. \n \nTo prevent potential problems, music playback will be disabled until you rescan your library.</string>
    <string name="rescan_required_caps">RESCAN REQUIRED</string>
    <string name="tap_here_to_rescan">Tap here to rescan your library.</string>
    <string name="rescan_required_message">You must rescan your music library before you can play music. Tap the banner at the bottom of your screen to rescan right now.</string>
    <string name="caution">Caution</string>
    <string name="album_art">Album Art</string>
    <string name="folders">Folders</string>
    <string name="licenses_and_about">Licenses &amp; About</string>
    <string name="blacklists">Blacklists</string>
    <string name="google_play_music">Google Play Music*</string>
    <string name="google_play_music_instructions">Jams can stream your Google Play Music library to your device. You must have the official Google Play Music app installed to use this feature.</string>
    <string name="google_play_music_disclaimer">*Google neither supports nor endorses Jams Music Player and its use of the Google Play Music service. Jams will access your music library using unofficial APIs. Google may choose to change their service at any time and cause this app to lose access to your library. Proceed at your own risk.</string>
    <string name="google_play_music_no_asterisk">Google Play Music</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="current_queue">Current queue</string>
    <string name="music_library">Music Library</string>
    <string name="scrobbling">Scrobbling</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="resume_last_queue">Resume Last Queue</string>
    <string name="appearance">Appearance</string>
    <string name="layouts">Layouts</string>
    <string name="appearance_description">Change the app\'s theme, colors, and more.</string>
    <string name="layouts_description">Switch between list and grid views for browsers.</string>
    <string name="folders_description">Customize folders view, hidden files, and the default folder to show.</string>
    <string name="music_folders_description">Rebuild your music library and change selected music folders.</string>
    <string name="gmusic_description">Change your Google Play Music account settings.</string>
    <string name="labels_description">Add, remove, and edit your custom labels.</string>
    <string name="album_art_description">Modify album art sources and download album art from the Internet.</string>
    <string name="blacklists_description">Modify blacklisted artists, albums, and songs.</string>
    <string name="audio_settings_description">Configure crossfade, headphone plug actions and toggle equalizer.</string>
    <string name="scrobbling_description">Toggle scrobbling and choose your scrobbling app.</string>
    <string name="about_description">About the app, open source licenses, and contact information</string>
    <string name="labels">Labels</string>
</resources>